--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
     sdk: flutter
   fluttertoast: ^8.1.1
   staggered_grid_view_flutter: ^0.0.4
-
+  lottie: 1.4.3 
+  quickalert: ^1.0.0
 dev_dependencies:
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -61,6 +62,7 @@ flutter:
     - assets/persons/
     - assets/movie/
     - assets/fruits/
+    - assets/animations/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
@@ -69,7 +71,7 @@ flutter:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
-  # example:
+  # example:-
   # fonts:
   #   - family: Schyler
   #     fonts:
