--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   lottie: 1.4.3
   quickalert: ^1.0.0
   staggered_grid_view_flutter: ^0.0.4
+  
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
@@ -58,6 +59,7 @@ flutter:
     - assets/movie/
     - assets/fruits/
     - assets/animations/
+    - assets/other/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
