--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,20 @@ environment:
 dependencies:
   carousel_slider: ^4.1.1
   cupertino_icons: ^1.0.2
+  file_picker: ^5.2.3
   flutter:
     sdk: flutter
+  flutter_chat_ui: ^1.6.6
   fluttertoast: ^8.1.1
+  image_picker: ^0.8.6
   lottie: 1.4.3
+  mime: ^1.0.3
+  open_filex: ^4.3.1
+  path_provider: ^2.0.11
   quickalert: ^1.0.0
   staggered_grid_view_flutter: ^0.0.4
-  
+  uuid: ^3.0.7
+
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
